--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2471,7 +2471,8 @@ img {
 	position: relative;
 	padding-top: 260px;
 	z-index: 99;
-	padding-bottom: 250px;
+	padding-bottom: 20px;
+	/* padding-bottom: 250px; */
 }
 
 .banner-carousel-section .content h2 {
@@ -12349,5 +12350,17 @@ img {
 		height: 20%;
 		width: 50%;
 		/* Override for screens wider than 768px */
+	}
+}
+
+.lady-png {
+	/* Default padding for all devices */
+	padding-top: 0;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+	.lady-png {
+		/* Padding for mobile devices */
+		padding-top: 120px;
 	}
 }
