--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2884,7 +2884,7 @@ img {
 }
 
 .about-section .content-column .sec-title {
-	margin-bottom: 55px;
+	margin-bottom: 30px;
 }
 
 .about-section .content-column .inner-column .text {
@@ -3896,6 +3896,38 @@ img {
 
 .testimonial-section .carousel-column .owl-nav .owl-prev:hover,
 .testimonial-section .carousel-column .owl-nav .owl-next:hover {
+	background-color: #371742;
+	border-color: #371742;
+	color: #ffffff;
+}
+
+
+
+
+
+.about-section .carousel-column .owl-nav .owl-prev,
+.about-section .carousel-column .owl-nav .owl-next {
+	position: relative;
+	width: 65px;
+	height: 30px;
+	color: #0f7bff;
+	font-size: 20px;
+	line-height: 28px;
+	text-align: center;
+	border-radius: 3px;
+	margin-right: 20px;
+	font-weight: 400;
+	display: inline-block;
+	border: 1px solid #0f7bff;
+	-webkit-transition: all 300ms ease;
+	-ms-transition: all 300ms ease;
+	-o-transition: all 300ms ease;
+	-moz-transition: all 300ms ease;
+	transition: all 300ms ease;
+}
+
+.about-section .carousel-column .owl-nav .owl-prev:hover,
+.about-section .carousel-column .owl-nav .owl-next:hover {
 	background-color: #371742;
 	border-color: #371742;
 	color: #ffffff;
