--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11329,7 +11329,7 @@ img {
 
 .reviews-comment-section {
 	position: relative;
-	padding-top: 85px;
+	/* padding-top: 85px; */
 	margin-bottom: 40px;
 }
 
